# fan-ce

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pixi.toml
backend/api-server/: alembic.ini  environment.yml  main.py  pyproject.toml
backend/api-server/alembic/: env.py
backend/api-server/alembic/versions/: 0075da32ae53_fix_phenome_observation_value_numeric_.py  189f59068f3b_add_owner_public_to_dataset_registry.py  1b007813bced_merge_two_heads_team_and_phenome.py  24075ad57ea3_add_dataset_master_table.py  8579d73151c6_add_unified_sample_experiment_views.py
backend/api-server/apps/: routers.py
backend/api-server/apps/analysis/: routers.py  worker.py
backend/api-server/apps/analysis/api/: core.py
backend/api-server/apps/analysis/tools/: go_enrich.py
backend/api-server/apps/auth/: login.py  menus.py  routers.py
backend/api-server/apps/breeding/: __init__.py  init.py  models.py  ncbi_taxonomy.py  routers.py  schemas.py  services.py  taxonomy_loader.py  tools.py
backend/api-server/apps/breeding/api/: core.py  public.py
backend/api-server/apps/common/: crud.py  depends.py  libs.py  schemas.py  security.py
backend/api-server/apps/databases/: __init__.py  crud.py  models.py  routers.py  schemas.py  services.py
backend/api-server/apps/databases/api/: __init__.py  actions.py  database.py  database_files.py  database_meta.py  databases_file_api.py
backend/api-server/apps/datasets/: assembly_validator.py  constants.py  crud.py  dataset_model.py  functional_indexing.py  init.py  interaction_matrix.py  legacy_bridge.py  models.py  phenome_indexing.py  routers.py  schemas.py  services.py  tools.py
backend/api-server/apps/datasets/adapters/: __init__.py  base.py  expression.py  functional_annotation.py  generic.py  (+4 more)
backend/api-server/apps/experiment/: crud.py  models.py
backend/api-server/apps/gene/: crud.py  models.py  routers.py  schemas.py
backend/api-server/apps/platform/: frp_service.py  init.py  models.py  routers.py  schemas.py  setup_jobs.py  setup_state.py
backend/api-server/apps/sample/: models.py  routers.py
backend/api-server/apps/services/: auth_key_service.py  databases.py  project.py  rbd.py  user.py
backend/api-server/apps/system/: __init__.py  init.py  routers.py  schemas.py
backend/api-server/apps/user/: api.py  crud.py  models.py
backend/api-server/basis/: README.md  routers.py
backend/api-server/basis/analysis/: base.py  registry.py
backend/api-server/basis/api/: biofile.py  d_expression.py  d_features.py  d_grn.py  d_ngs.py  d_phenome.py  d_publication.py  g_features.py  g_genes.py  g_sequences.py  m_file.py
backend/api-server/basis/core/: expression_utils.py  feature_utils.py  path_utils.py  samtools_utils.py
backend/api-server/basis/models/: biosample.py  meta_file.py
backend/api-server/basis/schemas/: biofile.py  breeding.py  expression.py  feature.py  gene_model.py  genomic_feature.py  genomic_sequence.py  meta_file.py  meta_genome.py  ngs.py  obsolate_genome.py  sequence.py  traits.py  variant.py
backend/api-server/basis/utils/: check_bgzip.py  load_genome.py
backend/api-server/conf/: config.example.yaml
backend/api-server/core/: config.py  response.py  security.py
backend/api-server/db/: base.py  bootstrap.py  init.py
backend/api-server/db/pgorm/: connect.py
backend/api-server/db/sqliteorm/: connect.py
backend/api-server/libs/: tool_registry.py  tools.py
backend/api-server/libs/exceptions/: __init__.py  exception.py
backend/api-server/libs/httpclient/: request.py
backend/api-server/libs/hytconfig/: config.py
backend/api-server/libs/logger/: loggers.py
backend/api-server/libs/responses/: __init__.py  response.py  result.py  schemas.py
backend/api-server/register/: app_init.py  router.py
backend/api-server/static/swagger-ui/: swagger-ui-bundle.js
backend/api-server/tests/: conftest.py  test_auth_user_info.py  test_breeding_readiness.py  test_breeding_schema.py  test_breeding_service.py  test_cross_query.py  test_database_deprecated.py  test_dataset_adapter_resolution.py  test_dataset_asset_type_resolution.py  test_dataset_compat_boundary.py  test_dataset_master_table.py  test_dataset_permissions.py  test_dataset_phenome_schema.py  test_dataset_public_semantics.py  test_dataset_scan_browse.py  test_expression_formats.py  test_legacy_isolation.py  test_lineage_constraints.py  test_multi_site.py  test_plant_taxonomy.py  test_platform_setup_status.py  test_public_lineage.py  test_tool_registry.py  test_unified_sample.py
backend/api-server/utils/fileaction/: file.py
backend/api-server/utils/ip/: __init__.py
backend/api-server/utils/unitaction/: filezie.py
backend/sdk/: MANIFEST.in  Makefile  README.md  build_complete.sh  pyproject.toml  requirements.txt  setup.py  structure_report.json  test_config_fix.py
backend/sdk/abd_sdk/: __init__.py  cli.py  client.py  config.py  config.yaml  config_example.json  exceptions.py  http_client.py  logger.py
backend/sdk/abd_sdk/api/: __init__.py  base.py  basis.py  database.py  experiment.py  gene.py  sample.py  system.py  user.py
backend/sdk/abd_sdk/examples/: __init__.py  basic_usage.py
backend/sdk/abd_sdk/tests/: __init__.py  test_basic.py
(+1131 files in other folders)
