[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fan-ce"
version = "0.1.0"
description = "FAN-CE - FAN Community Edition"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "kentnf, llq, kasper1995"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

# Main dependencies (migrated from requirements.txt)
dependencies = [
    "alembic>=1.14.0",
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.0",
    "SQLAlchemy>=2.0.36",
    "logger>=1.4",
    "loguru>=0.7.2",
    "psycopg[binary]>=3.2.9",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "pycryptodome>=3.21.0",
    "cryptography>=43.0.0",
    "requests>=2.32.3",
    "rich>=13.9.0",
    "uvicorn>=0.32.0",
    "opencv-python>=4.10.0.84",
    "selenium>=4.27.0",
    "pillow>=11.0.0",
    "tqdm>=4.67.0",
    "gffutils>=0.13",
    "pandas>=2.2.0",
    "h5py>=3.13.0",
    "networkx>=3.4.0",
    "openpyxl>=3.1.0",
    "fastapi[all]>=0.115.12",
    "numpy>=2.2.6",
    "pyBigWig>=0.3.24",
    "pydantic[settings]>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "confluent-kafka>=2.3.0",
    "pysam>=0.23.3",
    "chardet>=5.2.0",
]

# Optional dependencies
[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
]

# 测试依赖
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]  # 查找包的根目录
include = ["apps*", "basis*", "core*", "db*", "libs*", "register*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.conf", "*.ini", "*.obo"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
# When run via `pixi run`, CONDA_PREFIX and PATH include htslib/bedtools etc.
# These env vars help pysam and similar packages find system libraries.
# `uv sync` works without them — pysam bundles its own htslib statically.
